# netbox-tunnels-plugin

./: .gitignore  .travis.yml  README.md  pyproject.toml  setup.py  tasks.py
development/: base_configuration.py  dev.env  docker-compose.yml
netbox-tunnels-plugin/: __init__.py  admin.py  navigation.py
netbox_tunnels/: __init__.py  admin.py  choices.py  filters.py  forms.py  models.py  navigation.py  tables.py  urls.py  views.py
netbox_tunnels/migrations/: 0001_initial.py
netbox_tunnels/templates/netbox_tunnels/: tunnels_creation.html  tunnels_list.html
netbox_tunnels_plugin/: __init__.py  admin.py  choices.py  forms.py  models.py  navigation.py
tests/: __init__.py  test_netbox_tunnels.py  test_netbox_tunnels_plugin.py
